--- a/index.html
+++ b/index.html
@@ -1,2 +1,19 @@
-hello^^
-!!!
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>rosa's website</title>
+</head>
+<body>
+    
+    <h1>Class website for Core 2</h1>
+    hello ^_^
+    <ul>
+        <li><a href="./p1/index.html">Project 1</a></li>
+    </ul>
+   
+</body>
+</html>
+
+
