--- a/p1/goodnight/goodnight.html
+++ b/p1/goodnight/goodnight.html
@@ -7,8 +7,8 @@
 </head>
 <body>
     
-    <p>This is my Project 1</p>
-    <a href="../index.html"><button>Class Website</button></a>
+    <p>good night</p>
+    <a href="../home.html"><button>begin again?</button></a>
 
 </body>
 </html>
