--- a/p1/theend/theend.html
+++ b/p1/theend/theend.html
@@ -4,11 +4,39 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>project 1</title>
+    <link rel="stylesheet" href="../style.css">
+    <link rel="stylesheet" href="https://use.typekit.net/fjh7vgh.css">
+    <link rel="stylesheet" href="https://use.typekit.net/fjh7vgh.css">
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
+    <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js"></script>
 </head>
 <body>
     
-    <p>the end.</p>
-    <a href="../home.html"><button>begin again?</button></a>
+    <div class="navcontainer">
+        <div class="box1"><a href="../home.html"><p>[ begin again? ]</p></a></div>
+        <div class="box2"><p>The End.</p></div>
+        <div class="box3"><a href="../originsconsequences/originsconsequences.html"><p>[ next line ]</p></a></div>
+    </div>
+
+    <div class="content">
+        I will tell you what I miss: I miss watching a movie and at the end, huge scrolled words come on the screen and say: The End. I miss finishing a novel and there on the last page, at a discrete distance from the last words of the last sentence, are the dark letters spelling The End. 
+        <br>
+        <br>
+        It was its own thrill. I didn’t ignore them, I read them, even if only silently, with a deep sense of feeling: both the feeling of being replete, a feeling of satisfaction, and the feeling of loss, the sadness of having finished the book. 
+        <br>
+        <br>
+        I have never, in my life, read a poem that ended with the words The End. Why is that, I wonder. I think perhaps the brevity of poems compared to novels makes one feel that there has been no great sustention of energy, no marathon worthy of pulling tape across the finish line. And then I found a poem of mine that I had carefully written by hand in the sixth grade, and at the bottom of the page, in India ink, beautifully apart from the rest of the text, were the words The End. And I realized children very often denote the end because it is indeed a great achievement for them to have written anything, and they are completely unaware of the number of stories and poems that have already been written; they know some, of course, but have not yet found out the extent to which they are not the only persons residing on the planet. And so they sign their poems and stories like kings. Which is a wonderful thing. 
+        <br>
+        <br>
+        Roland Barthes suggests there are three ways to finish any piece of writing: the ending will have the last word or the ending will be silent or the ending will execute a pirouette, do something unexpectedly incongruent. 
+        <br>
+        <br>
+        Gaston Bachelard says the single most succinct and astonishing thing: We begin in admiration and we end by organizing our disappointment. The moment of admiration is the experience of something unfiltered, vital and fresh—it could also be horror—and the moment of organization is both the onset of disappointment and its dignification; the least we can do is dignify our knowingness, the loss of some vitality through familiarization, by admiring not the thing itself but how we can organize it, think about it. 
+        <br>
+        <br>
+        I am afraid there is no way around this. It is the one try inevitable thing. And if you believe that, then you are conceding that in the beginning was the act, not the word. 
+    </div>
 
 </body>
 </html>
