--- a/p1/fallenfruit/fallenfruit.html
+++ b/p1/fallenfruit/fallenfruit.html
@@ -4,11 +4,27 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>project 1</title>
+    <link rel="stylesheet" href="../style.css">
+    <link rel="stylesheet" href="https://use.typekit.net/fjh7vgh.css">
+    <link rel="stylesheet" href="https://use.typekit.net/fjh7vgh.css">
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
+    <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js"></script>
 </head>
 <body>
     
-    <p>fallen fruit</p>
-    <a href="../home.html"><button>begin again?</button></a>
+    <div class="navcontainer">
+        <div class="box1"><a href="../home.html"><p>[ begin again? ]</p></a></div>
+        <div class="box2"><p>fallen fruit</p></div>
+        <div class="box3"><a href="../actofthemind/actofthemind.html"><p>[ next line ]</p></a></div>
+    </div>
+
+    <div class="content">
+        Paul Valéry, the French poet and thinker, once said that no poem is ever ended, that every poem is merely abandoned. This saying is also attributed to Stéphane Mallarmé, for where quotations begin is in a cloud. 
+        <br>
+        <br>
+        Paul Valéry also described his perception of first lines so vividly, and to my mind so accurately, that i have never forgotten it: the opening line of a poem, he said, is like finding a fruit on the ground, a piece of fallen fruit you have never seen before, and the poet’s task is to create the tree from which such a fruit would fall.
+    </div>
 
 </body>
 </html>
