--- a/p1/home.html
+++ b/p1/home.html
@@ -4,19 +4,46 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>project 1</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://use.typekit.net/fjh7vgh.css">
+    <link rel="stylesheet" href="https://use.typekit.net/fjh7vgh.css">
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
+    <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js"></script>
+    <script src="script.js"></script>
+
 </head>
 <body>
-    
-    <p>on [ begin ] nings</p>
-    <p><a href="../p1/onbeginnings/onbeginnings.html">On Beginnings</a></p>
-    <p><a href="../p1/fallenfruit/fallenfruit.html">Fallen fruit...</a></p>
-    <p><a href="../p1/actofthemind/actofthemind.html">Act of the mind</a></p>
-    <p><a href="../p1/semicolons/semicolons.html">Semicolons</a></p>
-    <p><a href="../p1/theend/theend.html">The End.</a></p>
-    <p><a href="../p1/originsconsequences/originsconsequences.html">Origins & consequences</a></p>
-    <p><a href="../p1/goodnight/goodnight.html">Good night</a></p>
 
-    <p><a href="../p1/index.html">[ go to sleep ]</a></p>
+    <div class="navcontainer">
+        <div class="box1"></div>
+        <div class="box2"><p>on [ begin ] nings</p></div>
+        <div class="box3"></div>
+    </div>
+
+    <div class="maincontainer">
+        <div class="navpoem">
+
+            <a href="../p1/onbeginnings/onbeginnings.html">Beginnings</a>, like <a href="../p1/fallenfruit/fallenfruit.html">fallen fruit</a><br>
+            scatter without a sound,<br>
+            <a href="../p1/actofthemind/actofthemind.html">An act of the mind</a>,<br>
+            in <a href="../p1/ourlifetime/ourlifetime.html">our lifetime</a>'s profound.<br>
+            <a href="../p1/semicolons/semicolons.html">Semicolons</a> linger, hinting at a pause; <br>
+            <br>
+            In <a href="../p1/theend/theend.html">The End</a>, the poem is <br>
+            the <a href="../p1/originsconsequences/originsconsequences.html">consequence of its origins</a><br>
+            <a href="../p1/goodnight/goodnight.html">Good night</a> falls softly,<br>
+            a tender adieu,<br>
+            In the vast expanse<br>
+            beginnings renew.<br>
+            
+        </div>
+    </div>
+
+
+    <div class="footer">
+        <p><a href="index.html">[ go to sleep ]</a></p>
+    </div>
 
 </body>
 </html>
