--- a/p1/index.html
+++ b/p1/index.html
@@ -4,13 +4,27 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>project 1</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://use.typekit.net/fjh7vgh.css">
+    <link rel="stylesheet" href="https://use.typekit.net/fjh7vgh.css">
+    <style>
+        body {background-color: #000000}
+    </style>
 </head>
 <body>
     
-    <p>This is my Project 1</p>
-    <a href="../index.html"><button>Class Website</button></a>
+    <!-- <p>This is my Project 1</p>
+    <a href="../index.html"><button>Class Website</button></a> -->
 
-    <p><a href="../p1/home.html">[ begin ]</a></p>
+    <div class="navcontainer">
+        <div class="box1"></div>
+        <div class="box2">
+            <p>
+                <a href="home.html">on <span class="landing">[ begin ]</span> nings</a>
+            </p>
+        </div>
+        <div class="box3"></div>
+    </div>
 
 </body>
 </html>
