--- a/p1/originsconsequences/originsconsequences.html
+++ b/p1/originsconsequences/originsconsequences.html
@@ -4,11 +4,42 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>project 1</title>
+    <link rel="stylesheet" href="../style.css">
+    <link rel="stylesheet" href="https://use.typekit.net/fjh7vgh.css">
+    <link rel="stylesheet" href="https://use.typekit.net/fjh7vgh.css">
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
+    <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js"></script>
 </head>
 <body>
     
-    <p>origins & consequences</p>
-    <a href="../home.html"><button>begin again?</button></a>
+    <div class="navcontainer">
+        <div class="box1"><a href="../home.html"><p>[ begin again? ]</p></a></div>
+        <div class="box2"><p>origins & consequences</p></div>
+        <div class="box3"><a href="../goodnight/goodnight.html"><p>[ next line ]</p></a></div>
+    </div>
+
+    <div class="content">
+        The painter Cy Twombly quotes John Crowe Ransom, on a scrap of paper: “The image cannot be disposed of a primordial freshness which ideas can never claim.”
+        <br>
+        <br>
+        Easy and appropriate thing for a painter to say. Cy Twombly uses text in some of his drawings and paintings, usually poetry, usually Dante. Many men and women have written long essays and lectures on the ideas they see expressed in Twombly’s work. 
+        <br>
+        <br>
+        Easy and appropriate thing for a painter to say. Cy Twombly uses text in some of his drawings and paintings, usually poetry, usually Dante. Many men and women have written long essays and lectures on the ideas they see expressed in Twombly’s work. 
+        <br>
+        <br>
+        Bachelard’s sentence simply says this: origins (beginnings) have consequences (endings).
+        <br>
+        <br>
+        The poem is the consequence of its origins. Give me the fruit and I will take from it a see and plant it and watch grow the tree from which it fell. 
+        <br>
+        <br>
+        Barbara Henstein Smith, in her book Poetic Closure: A Study of How Poems End, says this: “Perhaps all we can say, and even this may be too much, is that varying degrees or states of tension seem to be involved in all our experiences, and that the most gratifying ones are those in which whatever tensions are created are also released. Or, to use another familiar set of terms, an experience is gratifying to the extent that those expectations that are aroused are also fulfilled.”
+        <br>
+        <br>
+        But there is no book I know of on the subject of how poems begin. How can the origin be traced when there is no form or shape that precedes it to trace? It is exactly like tracing the moment of the big bang—we can go back to a nanosecond before the beginning, before the universe burst into being, but we can’t go back to the precise beginning because that would precede knowledge, and we can’t “know” anything before “knowing” itself was born. 
+    </div>
 
 </body>
 </html>
