--- a/p1/semicolons/semicolons.html
+++ b/p1/semicolons/semicolons.html
@@ -4,11 +4,30 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>project 1</title>
+    <link rel="stylesheet" href="../style.css">
+    <link rel="stylesheet" href="https://use.typekit.net/fjh7vgh.css">
+    <link rel="stylesheet" href="https://use.typekit.net/fjh7vgh.css">
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
+    <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js"></script>
 </head>
 <body>
     
-    <p>semicolons</p>
-    <a href="../home.html"><button>begin again?</button></a>
+    <div class="navcontainer">
+        <div class="box1"><a href="../home.html"><p>[ begin again? ]</p></a></div>
+        <div class="box2"><p>Semicolons</p></div>
+        <div class="box3"><a href="../theend/theend.html"><p>[ next line ]</p></a></div>
+    </div>
+
+    <div class="content">
+        When I told Mr. Angel about the lifelong sentence, he said: “That’s a lot of semicolons!” he is absolutely right; the sentence would be unwieldy and awkward and resemble the novel of a savant, but the next time you use a semicolon (which, by the way, is the least-used mark of punctuation in all of poetry) you should stop and be thankful that there exists this little thing, invented by a human being—an Italian as a matter of fact—that allows us to go on and keep on connecting speech that for all apparent purposes is unrelated. 
+        <br>
+        <br>
+        You might say a poem is a semicolon, a living semicolon, what connects the first line to the last, the act of keeping together that whose nature is to fly apart. Between the first and last lines there exists—a poem—and if it were not for the poem that intervenes, the first and last lines of a poem would not speak to each other. 
+        <br>
+        <br>
+        Would not speak to each other. Because the lines of a poem are speaking to each other, not you to them or they to you.
+    </div>
 
 </body>
 </html>
