--- a/p1/05semicolons/semicolons.html
+++ b/p1/05semicolons/semicolons.html
@@ -16,7 +16,7 @@
     <div class="navcontainer">
         <div class="box1"><a href="../home.html"><p>[ begin again? ]</p></a></div>
         <div class="box2"><p>Semicolons</p></div>
-        <div class="box3"><a href="../theend/theend.html"><p>[ next line ]</p></a></div>
+        <div class="box3"><a href="../06theend/theend.html"><p>[ next line ]</p></a></div>
     </div>
 
     <div class="content">
