--- a/p1/home.html
+++ b/p1/home.html
@@ -24,15 +24,15 @@
     <div class="maincontainer">
         <div class="navpoem">
 
-            <a href="../p1/onbeginnings/onbeginnings.html">Beginnings</a>, like <a href="../p1/fallenfruit/fallenfruit.html">fallen fruit</a><br>
+            <a href="../p1/01onbeginnings/onbeginnings.html">Beginnings</a>, like <a href="../p1/02fallenfruit/fallenfruit.html">fallen fruit</a><br>
             scatter without a sound,<br>
-            <a href="../p1/actofthemind/actofthemind.html">An act of the mind</a>,<br>
-            in <a href="../p1/ourlifetime/ourlifetime.html">our lifetime</a>'s profound.<br>
-            <a href="../p1/semicolons/semicolons.html">Semicolons</a> linger, hinting at a pause; <br>
+            An <a href="../p1/03actofthemind/actofthemind.html">act of the mind</a>,<br>
+            in <a href="../p1/04ourlifetime/ourlifetime.html">our lifetime</a>'s profound.<br>
+            <a href="../p1/05semicolons/semicolons.html">Semicolons</a> linger, hinting at a pause; <br>
             <br>
-            In <a href="../p1/theend/theend.html">The End</a>, the poem is <br>
-            the <a href="../p1/originsconsequences/originsconsequences.html">consequence of its origins</a><br>
-            <a href="../p1/goodnight/goodnight.html">Good night</a> falls softly,<br>
+            In <a href="../p1/06theend/theend.html">The End</a>, the poem is <br>
+            the <a href="../p1/07originsconsequences/originsconsequences.html">consequence of its origins</a><br>
+            <a href="../p1/08goodnight/goodnight.html">Good night</a> falls softly,<br>
             a tender adieu,<br>
             In the vast expanse<br>
             beginnings renew.<br>
