--- a/p1/04ourlifetime/ourlifetime.html
+++ b/p1/04ourlifetime/ourlifetime.html
@@ -16,7 +16,7 @@
     <div class="navcontainer">
         <div class="box1"><a href="../home.html"><p>[ begin again? ]</p></a></div>
         <div class="box2"><p>our lifetime</p></div>
-        <div class="box3"><a href="../semicolons/semicolons.html"><p>[ next line ]</p></a></div>
+        <div class="box3"><a href="../05semicolons/semicolons.html"><p>[ next line ]</p></a></div>
     </div>
 
     <div class="content">
