--- a/p1/07originsconsequences/originsconsequences.html
+++ b/p1/07originsconsequences/originsconsequences.html
@@ -16,7 +16,7 @@
     <div class="navcontainer">
         <div class="box1"><a href="../home.html"><p>[ begin again? ]</p></a></div>
         <div class="box2"><p>origins & consequences</p></div>
-        <div class="box3"><a href="../goodnight/goodnight.html"><p>[ next line ]</p></a></div>
+        <div class="box3"><a href="../08goodnight/goodnight.html"><p>[ next line ]</p></a></div>
     </div>
 
     <div class="content">
