--- a/p1/01onbeginnings/onbeginnings.html
+++ b/p1/01onbeginnings/onbeginnings.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>project 1</title>
+    <title>On Beginnings</title>
     <link rel="stylesheet" href="../style.css">
     <link rel="stylesheet" href="style01.css">
     <link rel="stylesheet" href="https://use.typekit.net/fjh7vgh.css">
@@ -11,7 +11,7 @@
     <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
     <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js"></script>
-    <script src="../script.js"></script>
+    <script src="script01.js"></script>
 </head>
 <body>
     
