--- a/p1/08goodnight/goodnight.html
+++ b/p1/08goodnight/goodnight.html
@@ -3,27 +3,40 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>project 1</title>
+    <title>On Beginnings</title>
     <link rel="stylesheet" href="../style.css">
+    <link rel="stylesheet" href="style08.css">
     <link rel="stylesheet" href="https://use.typekit.net/fjh7vgh.css">
     <link rel="stylesheet" href="https://use.typekit.net/fjh7vgh.css">
     <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
     <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js"></script>
+    <script src="script08.js"></script>
 </head>
 <body>
     
     <div class="navcontainer">
         <div class="box1"><a href="../home.html"><p>[ begin again? ]</p></a></div>
         <div class="box2"><p>Good night</p></div>
-        <div class="box3"><a href="../index.html"><p>[ abandon this poem. ]</p></a></div>
+        <div class="box3"><a href="../index.html"><p>[ go to sleep ]</p></a></div>
     </div>
 
-    <div class="content">
-        I have flipped through books, reading hundreds of opening and closing lines, across ages, across cultures, across aesthetic schools, and I have discovered that first lines are remarkably similar, even repeated, and that last lines are remarkably similar, even repeated. Of course in all cases they remain remarkably distinct, because the words belong to completely different poems. And i began to realize, reading these first and last lines, that there are not only the first and last lines of the lifelong sentence we each speak but also the first and last lines of the long piece of language delivered to use by others, by those we listen to. And in the best of all possible lives, that beginning and that end are the same: in poem after poem I encountered words that mark the first something made out of language that we hear as children repeated night after night, like a refrain: I love you. I am here with you. Don’t be afraid. Go to sleep now. And I encountered words that mark the last something made out of language that we hope to hear on earth: I love you. I am here with you. Don’t be afraid. Go to sleep now. 
-        <br>
-        <br>
-        But it is growing damp and I must go in. Memory’s fog is rising. Among Emily Dickinson’s last words (in a letter). A woman whom everyone thought of as shut-in, homebound, cloistered, spoke as if she had been out, exploring the earth, her whole life, and it was finally time to go in. And it was.  
+    <div class="container">
+        <div class="content">
+            <br><br>
+            <span class="blur">I have flipped through books, reading hundreds of opening and closing lines, across ages, across cultures, across aesthetic schools, and I have discovered that first lines are remarkably similar, even repeated, and that last lines are remarkably similar, even repeated. Of course in all cases they remain remarkably distinct, because the words belong to completely different poems. And I began to realize, reading these first and last lines, that there are not only the first and last lines of the lifelong sentence we each speak but also the first and last lines of the long piece of language delivered to use by others, by those we listen to. And in the best of all possible lives, that beginning and that end are the same: in poem after poem I encountered words that mark the first something made out of language that we hear as children repeated night after night, like a refrain:</span><br><br><br><br><br><br><br><br><br><br>
+            <span class="text-color-animation">I love you. <br>I am here with you. <br>Don’t be afraid. <br>Go to sleep now. </span> 
+            <br><br><br><br><br>
+            <span class="text-color-animation">Go to sleep now.</span>
+            <br><br><br><br><br><br><br><br><br><br>
+            <span class="blur">And I encountered words that mark the last something made out of language that we hope to hear on earth:</span>
+            <br><br><br><br><br><br><br><br>
+            <span class="text-color-animation">I love you. <br>I am here with you. <br>Don’t be afraid. <br>Go to sleep now. </span> 
+            <br><br><br><br><br><br><br><br>
+            <span class="blur">But it is growing damp and I must go in. Memory’s fog is rising. Among Emily Dickinson’s last words (in a letter). A woman whom everyone thought of as shut-in, homebound, cloistered, spoke as if she had been out, exploring the earth, her whole life, and it was finally time to go in. And it was.</span>
+            <br><br><br><br><br><br><br><br><br>
+            <a href="../index.html"><span class="sleep-animation">[ go to sleep now ]</span></a><br><br>
+        </div>
     </div>
 
 </body>
