--- a/p1/06theend/theend.html
+++ b/p1/06theend/theend.html
@@ -22,21 +22,10 @@
 
     <div class="content">
         <div class="container">
-            <div class="part1">I will tell you what I miss: I miss watching a movie and at the end, huge scrolled words come on the screen and say: 
+            <div class="part1">I will tell you what I miss:<br> I miss watching a movie and at the end,<br> huge scrolled words come on the screen and say: 
             </div>
                 <div class="theend">THE END.</div>
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
+            <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
         </div>
         <div class="container2">
             <div class="part2">I miss finishing a novel and there on the last page, at a discrete distance from the last words of the last sentence, are the dark letters spelling</div> 
