--- a/p1/01onbeginnings/onbeginnings.html
+++ b/p1/01onbeginnings/onbeginnings.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>On Beginnings</title>
+    <meta name="description" content="Project 1. Stories as Networks - This site is an exploration of the essay On Beginnings by Maya Ruefle as a web experience.">
+    <link rel="icon" type="image/png" href="../../favicon.png">
     <link rel="stylesheet" href="../style.css">
     <link rel="stylesheet" href="style01.css">
     <link rel="stylesheet" href="https://use.typekit.net/fjh7vgh.css">
@@ -15,13 +17,13 @@
 </head>
 <body>
     
-    <div class="navcontainer">
+    <nav>
         <div class="box1"><p><a href="../home.html">[ begin again? ]</a></p></div>
         <div class="box2"><p>beginnings</p></div>
         <div class="box3"><a href="../02fallenfruit/fallenfruit.html"><p>[ next line ]</p></a></div>
-    </div>
+    </nav>
 
-    <div class="content">
+    <section class="content">
         <div id="textContainer">
         In life, the number of <button id="beginBtn">begin</button>nings is exactly equal to the number of endings: <br><br> 
         </div>
@@ -31,9 +33,7 @@
         <div id="textContainer3"></div>
         <div id="textContainer4"></div>
 
-    </div>
-
-    
+    </section>
 
 </body>
 </html>
