--- a/p1/02fallenfruit/fallenfruit.html
+++ b/p1/02fallenfruit/fallenfruit.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>On Beginnings</title>
+    <meta name="description" content="Project 1. Stories as Networks - This site is an exploration of the essay On Beginnings by Maya Ruefle as a web experience.">
+    <link rel="icon" type="image/png" href="../../favicon.png">
     <link rel="stylesheet" href="../style.css">
     <link rel="stylesheet" href="style02.css">
     <link rel="stylesheet" href="https://use.typekit.net/fjh7vgh.css">
@@ -17,20 +19,20 @@
 </head>
 <body>
     
-    <div class="navcontainer">
+    <nav>
         <div class="box1"><a href="../home.html"><p>[ begin again? ]</p></a></div>
         <div class="box2"><p>fallen fruit</p></div>
         <div class="box3"><a href="../03actofthemind/actofthemind.html"><p>[ next line ]</p></a></div>
-    </div>
+    </nav>
 
-    <div class="flexcontainer">
+    <section class="flexcontainer">
         <div class="content1">
             Paul Valéry also described his perception of first lines so vividly, and to my mind so accurately, that i have never forgotten it: the opening line of a poem, he said, is like:
         </div>
         <div class="content2">
             Finding a _____<span>fruit</span> on the ground, a piece of _____ _____<span>fallen</span> <span>fruit</span> you have never seen before, and the poet’s task is to create the tree from which such a <span>fruit</span>_____ would <span>fall</span>____. 
         </div>
-    </div>
+    </section>
 
 </body>
 </html>
