--- a/p1/04ourlifetime/ourlifetime.html
+++ b/p1/04ourlifetime/ourlifetime.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>On Beginnings</title>
+    <meta name="description" content="Project 1. Stories as Networks - This site is an exploration of the essay On Beginnings by Maya Ruefle as a web experience.">
+    <link rel="icon" type="image/png" href="../../favicon.png">
     <link rel="stylesheet" href="../style.css">
     <link rel="stylesheet" href="style04.css">
     <link rel="stylesheet" href="https://use.typekit.net/fjh7vgh.css">
@@ -14,23 +16,39 @@
 </head>
 <body>
     
-    <div class="navcontainer">
+    <section class="ourlifetime">
         <div class="box1"><a href="../home.html"><p>[ begin again? ]</p></a></div>
         <div class="box2"><p>our lifetime</p></div>
         <div class="box3"><a href="../05semicolons/semicolons.html"><p>[ next line ]</p></a></div>
-    </div>
+    </section>
 
-    <div class="content1">
+    <section class="content1">
         <div class="outer-wrapper">
             <div class="wrapper">
-            <div class="child1">Everyone knows that if you query poets about how their poems begin, the answer is always the same: a phrase, a line, a scrap of language, a rhythm, an image, something seen, heard, witnessed, or imagined. And the lesson is always the same, and young poets recognize this to be one of the most important lessons they can learn: if you have any idea for a poem, an exact grid of intent, you are on the wrong path, a dead-end alley, at the top of a cliff you haven’t even climbed. This is a lesson that can only be learned by trial and error. 
-            </div>
-            <div class="child1"> I believe many fine poems begin with ideas, but if you tell too many faces this, or tell it too loudly, they will get the wrong idea. 
-            </div>
-            <div class="child1"> Now here is something really interesting (to me), something you can use at a standing-up-only party when everyone is tired of hearing there are one million three-thousand-two-hundred-ninety-five words used by the Esimo for snow. This is what Ezra Pound learned from Ernest Fenollosa: Some languages are so constructed—English among them—that we each only really speak one sentence in our lifetime. That sentence begins with your first words, toddling around the kitchen, and ends with your last words right before you step into the limousine, or in a nursing home, the night-duty attendant vaguely on hand. Or, if you are blessed, they are heard by someone who knows you and loves you and will be sorry to hear the sentence end.</div>
+                <div class="child1">
+                    Everyone knows that if you query poets about how their poems begin, the answer is always the same: a phrase, a line, a scrap of language, a rhythm, an image, something seen, heard, witnessed, or imagined.
+                </div>
+                <div class="child2">
+                    And the lesson is always the same, and young poets recognize this to be one of the most important lessons they can learn: if you have any idea for a poem, an exact grid of intent, you are on the wrong path, a dead-end alley, at the top of a cliff you haven’t even climbed. This is a lesson that can only be learned by trial and error.
+                </div>
+                <div class="child3"> 
+                    I believe many fine poems begin with ideas, but if you tell too many faces this, or tell it too loudly, they will get the wrong idea. 
+                </div>
+                <div class="child1"> 
+                    Now here is something really interesting (to me), something you can use at a standing-up-only party when everyone is tired of hearing there are one million three-thousand-two-hundred-ninety-five words used by the Esimo for snow.
+                </div>
+                <div class="child4"> 
+                    This is what Ezra Pound learned from Ernest Fenollosa: Some languages are so constructed—English among them—that we each only really speak one sentence in our lifetime. 
+                </div>
+                <div class="child6">
+                    That sentence begins with your first words, toddling around the kitchen, and ends with your last words right before you step into the limousine, or in a nursing home, the night-duty attendant vaguely on hand. 
+                </div>
+                <div class="child5"> 
+                    Or, if you are blessed, they are heard by someone who knows you and loves you and will be sorry to hear the sentence end.
+                </div>
             </div>
         </div>
-    </div>
+    </section>
 
 </body>
 </html>
