--- a/p1/07originsconsequences/originsconsequences.html
+++ b/p1/07originsconsequences/originsconsequences.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>On Beginnings</title>
+    <meta name="description" content="Project 1. Stories as Networks - This site is an exploration of the essay On Beginnings by Maya Ruefle as a web experience.">
+    <link rel="icon" type="image/png" href="../../favicon.png">
     <link rel="stylesheet" href="../style.css">
     <link rel="stylesheet" href="style07.css">
     <link rel="stylesheet" href="https://use.typekit.net/fjh7vgh.css">
@@ -15,28 +17,26 @@
 </head>
 <body>
     
-    <div class="navcontainer">
+    <nav>
         <div class="box1"><a href="../home.html"><p>[ begin again? ]</p></a></div>
         <div class="box2"><p>origins & consequences</p></div>
         <div class="box3"><a href="../08goodnight/goodnight.html"><p>[ next line ]</p></a></div>
-    </div>
+    </nav>
 
-    <div class="container">
+    <section class="container">
         <div class="content">
             <br>
             The painter Cy Twombly quotes John Crowe Ransom, on a scrap of paper:
-            <br> 
-            <br>
-            <br> 
+            <br> <br><br> 
             <div class="paint">
                 <span>“The</span> <span>image</span> <span>cannot</span> <span>be</span> <span>disposed</span> <span>of</span> <span>a</span> <span>primordial</span> <span>freshness</span> <span>which</span> <span>ideas</span> <span>can</span> <span>never</span> <span>claim.”</span>
             </div>
             <br><br><br><br><br><br><br><br><br><br><br><br><br>
-            Easy and appropriate thing for a painter to say. 
+                Easy and appropriate thing for a painter to say. 
             <br><br><br><br><br><br><br><br><br><br><br><br><br>
-            Cy Twombly uses text in some of his drawings and paintings, usually poetry, usually Dante. Many men and women have written long essays and lectures on the ideas they see expressed in Twombly’s work. 
+                Cy Twombly uses text in some of his drawings and paintings, usually poetry, usually Dante. Many men and women have written long essays and lectures on the ideas they see expressed in Twombly’s work. 
             <br><br><br><br><br><br>
-            Bachelard’s sentence simply says this: 
+                Bachelard’s sentence simply says this: 
             <br><br><br>
             <div class="paint2">
                 <span>Origins</span> <span>(beginnings)</span> <span>have</span> <span>consequences</span> <span>(endings).</span>
@@ -49,21 +49,20 @@
                 <br><br>
             </div>
             <br><br><br><br><br><br>
-            Barbara Henstein Smith, in her book Poetic Closure: A Study of How Poems End, says this: “Perhaps all we can say, and even this may be too much, is that varying degrees or states of tension seem to be involved in all our experiences, and that the most gratifying ones are those in which whatever tensions are created are also released. Or, to use another familiar set of terms, an experience is gratifying to the extent that those expectations that are aroused are also fulfilled.”
+                Barbara Henstein Smith, in her book Poetic Closure: A Study of How Poems End, says this: “Perhaps all we can say, and even this may be too much, is that varying degrees or states of tension seem to be involved in all our experiences, and that the most gratifying ones are those in which whatever tensions are created are also released. Or, to use another familiar set of terms, an experience is gratifying to the extent that those expectations that are aroused are also fulfilled.”
             <br><br><br><br>
-            But there is no book I know of on the subject of how poems begin. 
+                But there is no book I know of on the subject of how poems begin. 
             <br><br><br><br>
             <div class="paint4">
-            <span>How</span> <span>can</span> <span>the</span> <span>origin</span> <span>be</span> <span>traced</span> <span>when</span> <span>there</span> <span>is</span> <span>no</span> <span>form</span> <span>or</span> <span>shape</span> <span>that</span> <span>precedes</span> <span>it</span> <span>to</span> <span>trace?</span> 
+                <span>How</span> <span>can</span> <span>the</span> <span>origin</span> <span>be</span> <span>traced</span> <span>when</span> <span>there</span> <span>is</span> <span>no</span> <span>form</span> <span>or</span> <span>shape</span> <span>that</span> <span>precedes</span> <span>it</span> <span>to</span> <span>trace?</span> 
             </div>
             <br><br><br><br>
-            It is exactly like tracing the moment of the big bang—we can go back to a nanosecond before the beginning, before the universe burst into being, but we can’t go back to the precise beginning because that would precede knowledge, and we can’t “know” anything before “knowing” itself was born.
+                It is exactly like tracing the moment of the big bang—we can go back to a nanosecond before the beginning, before the universe burst into being, but we can’t go back to the precise beginning because that would precede knowledge, and we can’t “know” anything before “knowing” itself was born.
             <br><br><br><br><br><br><br>
-            <a href="../home.html">[ trace origin ]</a>       or     <a href="../08goodnight/goodnight.html">[ move onto next line ]</a></span>
-            <br><br><br><br>
+            <a href="../home.html">[ trace origin ]</a> or <a href="../08goodnight/goodnight.html">[ move onto next line ]</a></span>
+            <br><br>
         </div> 
-        </div>
-    </div>
+    </section>
 
 </body>
 </html>
