--- a/p1/08goodnight/goodnight.html
+++ b/p1/08goodnight/goodnight.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>On Beginnings</title>
+    <meta name="description" content="Project 1. Stories as Networks - This site is an exploration of the essay On Beginnings by Maya Ruefle as a web experience.">
+    <link rel="icon" type="image/png" href="../../favicon.png">
     <link rel="stylesheet" href="../style.css">
     <link rel="stylesheet" href="style08.css">
     <link rel="stylesheet" href="https://use.typekit.net/fjh7vgh.css">
@@ -15,13 +17,13 @@
 </head>
 <body>
     
-    <div class="navcontainer">
+    <nav>
         <div class="box1"><a href="../home.html"><p>[ begin again? ]</p></a></div>
         <div class="box2"><p>Good night</p></div>
         <div class="box3"><a href="../index.html"><p>[ go to sleep ]</p></a></div>
-    </div>
+    </nav>
 
-    <div class="container">
+    <section class="container">
         <div class="content">
             <br><br>
             <span class="blur">I have flipped through books, reading hundreds of opening and closing lines, across ages, across cultures, across aesthetic schools, and I have discovered that first lines are remarkably similar, even repeated, and that last lines are remarkably similar, even repeated. Of course in all cases they remain remarkably distinct, because the words belong to completely different poems. And I began to realize, reading these first and last lines, that there are not only the first and last lines of the lifelong sentence we each speak but also the first and last lines of the long piece of language delivered to use by others, by those we listen to. And in the best of all possible lives, that beginning and that end are the same: in poem after poem I encountered words that mark the first something made out of language that we hear as children repeated night after night, like a refrain:</span><br><br><br><br><br><br><br><br><br><br>
@@ -37,7 +39,7 @@
             <br><br><br><br><br><br><br><br><br>
             <a href="../index.html"><span class="sleep-animation">[ go to sleep now ]</span></a><br><br>
         </div>
-    </div>
+    </section>
 
 </body>
 </html>
