--- a/p1/home.html
+++ b/p1/home.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>On Beginnings</title>
+    <meta name="description" content="Project 1. Stories as Networks - This site is an exploration of the essay On Beginnings by Maya Ruefle as a web experience.">
+    <link rel="icon" type="image/png" href="../favicon.png">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://use.typekit.net/fjh7vgh.css">
     <link rel="stylesheet" href="https://use.typekit.net/fjh7vgh.css">
@@ -15,15 +17,12 @@
 </head>
 <body>
 
-    <div class="navcontainer">
-        <div class="box1"></div>
-        <div class="box2"><p>on [ begin ] nings</p></div>
-        <div class="box3"></div>
-    </div>
+    <header>
+        <p>on [ begin ] nings</p>
+    </header>
 
-    <div class="maincontainer">
+    <section class="maincontainer">
         <div class="navpoem">
-
             <a href="../p1/01onbeginnings/onbeginnings.html">Beginnings</a>, like <a href="../p1/02fallenfruit/fallenfruit.html">fallen fruit</a><br>
             scatter without a sound,<br>
             An <a href="../p1/03actofthemind/actofthemind.html">act of the mind</a>,<br>
@@ -36,14 +35,13 @@
             a tender adieu,<br>
             In the vast expanse<br>
             beginnings renew.<br>
-            
         </div>
-    </div>
+    </section>
 
 
-    <div class="footer">
+    <footer>
         <p><a href="index.html">[ go to sleep ]</a></p>
-    </div>
+    </footer>
 
 </body>
 </html>
