--- a/p1/index.html
+++ b/p1/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>On Beginnings</title>
+    <meta name="description" content="Project 1. Stories as Networks - This site is an exploration of the essay On Beginnings by Maya Ruefle as a web experience.">
+    <link rel="icon" type="image/png" href="../favicon.png">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://use.typekit.net/fjh7vgh.css">
     <link rel="stylesheet" href="https://use.typekit.net/fjh7vgh.css">
