--- a/p1/03actofthemind/actofthemind.html
+++ b/p1/03actofthemind/actofthemind.html
@@ -4,30 +4,36 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>On Beginnings</title>
+    <meta name="description" content="Project 1. Stories as Networks - This site is an exploration of the essay On Beginnings by Maya Ruefle as a web experience.">
+    <link rel="icon" type="image/png" href="../../favicon.png">
     <link rel="stylesheet" href="../style.css">
+    <link rel="stylesheet" href="style03.css">
     <link rel="stylesheet" href="https://use.typekit.net/fjh7vgh.css">
     <link rel="stylesheet" href="https://use.typekit.net/fjh7vgh.css">
     <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
     <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js"></script>
+    <script src="script03.js"></script>
 </head>
 <body>
     
-    <div class="navcontainer">
+    <nav>
         <div class="box1"><a href="../home.html"><p>[ begin again? ]</p></a></div>
         <div class="box2"><p>act of the mind</p></div>
         <div class="box3"><a href="../04ourlifetime/ourlifetime.html"><p>[ next line ]</p></a></div>
-    </div>
+    </nav>
 
-    <div class="content">
-        In the beginning was the Word. Western civilization rests upon those words. And yet there is a lively group of thinkers who believe that in the beginning was the Act. That nothing can precede action—no breath before act, no thought before act, no pervasive love before some kind of act. 
-        <br>
-        <br>
-        I believe the poem is an act of the mind. I think it is easier to talk about the end of a poem than it is to talk about its beginning. Because the poem ends on the page, but it begins off the page, it begins in the mind. The mind acts, the mind wills a poem, often against our own will; somehow this happens, somehow a poem gets written in the middle of a chaotic holiday party that has just run out of ice, and it's your house. 
-        <br>
-        <br>
-        An act of the mind. To move, to make happen, to make manifest. Be an act of Congress. A state of real existence rather than possibility. And poets love possibility! They love to wonder and explore. Hard lot! But the poem, no matter how full of possibility, has to exist! To conduct oneself, to behave. How a poem acts marks its individual character. A poem by Glandolyn Blue does not sound like a poem by Timothy Sure. to pretend, feign, impersonate. That, too, yes and always, because self-consciousness is its own pretension, and has been from its beginning; the human mind is capable of a great elastic theatre. As the poet Ralph angel puts it, “The poem is an interpretation of weird theatrical shit.” the weird theatrical shit is what goes on around us every day of our lives; an animal of only instinct, Johnny Ferret, has in his actions drama, but no theater; theater requires that you draw a circle around the action and observe it from outside the circle; in other words, self-consciousness is theatre. 
-    </div>
+    <section class="flexcontainer">
+        <div class="content1"> 
+           <div class="child1">
+            In the beginning was the Word. Western civilization rests upon those words. And yet there is a lively group of thinkers who believe that in the beginning was the Act. That nothing can precede action—no breath before act, no thought before act, no pervasive love before some kind of act. 
+            </div>
+            <div class="child2">
+                <button id="act">ACT!</button>
+            </div>
+        </div>
+        <div class="content2"></div>
+    </section>    
 
 </body>
 </html>
