--- a/p1/index.html
+++ b/p1/index.html
@@ -14,19 +14,12 @@
     </style>
 </head>
 <body>
+
+    <header class="index">
+        <p>
+            on <span id="index"><a href="home.html">[ begin ]</a></span> nings
+        </p>
+    </header>
     
-    <!-- <p>This is my Project 1</p>
-    <a href="../index.html"><button>Class Website</button></a> -->
-
-    <div class="navcontainer">
-        <div class="box1"></div>
-        <div class="box2">
-            <p>
-                <a href="home.html">on <span class="landing">[ begin ]</span> nings</a>
-            </p>
-        </div>
-        <div class="box3"></div>
-    </div>
-
 </body>
 </html>
