--- a/p1/08goodnight/goodnight.html
+++ b/p1/08goodnight/goodnight.html
@@ -37,7 +37,7 @@
             <br><br><br><br><br><br><br><br>
             <span class="blur">But it is growing damp and I must go in. Memory’s fog is rising. Among Emily Dickinson’s last words (in a letter). A woman whom everyone thought of as shut-in, homebound, cloistered, spoke as if she had been out, exploring the earth, her whole life, and it was finally time to go in. And it was.</span>
             <br><br><br><br><br><br><br><br><br>
-            <a href="../index.html"><span class="sleep-animation">[ go to sleep now ]</span></a><br><br>
+            <span id="sleep-animation"><a href="../index.html">[ go to sleep now ]</a></span><br><br>
         </div>
     </section>
 
