--- a/index.html
+++ b/index.html
@@ -3,16 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>rosa's website</title>
+    <title>rosa de vera</title>
+    <meta name="description" content="Rosa de Vera's website for Core 2: Interaction, Spring 2024">
+    <link rel="icon" type="image/png" href="favicon.png">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
-    <h1>Class website for Core 2</h1>
-    hello ^_^
-    <ul>
-        <li><a href="./p1/index.html">Project 1</a></li>
-    </ul>
-   
+
+        <section class="name">
+            <h1>rosa de vera </h1>
+            <h2>Core 2: Interaction</h2>
+        </section>
+
+        <div class="flower1"><a href="./p1/index.html">✿</a></div>
+        <div class="flower2"><a>❀</a></div>
+        <div class="flower3"><a>❁</a></div>
+
 </body>
 </html>
 
