--- a/p1/home.html
+++ b/p1/home.html
@@ -41,5 +41,9 @@
         <p><a href="index.html">[ go to sleep ]</a></p>
     </footer>
 
+    <div class="back">
+        <a href="../index.html"> < </a>
+    </div>
+
 </body>
 </html>
