--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     </section>
 
     <div class="flower1"><a href="./p1/index.html">✿</a></div>
-    <div class="flower2"><a>❀</a></div>
+    <div class="flower2"><a href="https://rosadevera.github.io/frommetoyou/">❀</a></div>
     <div class="flower3"><a>❁</a></div>
 
     <section class="container">
