--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
 
     <div class="flower1"><a href="./p1/index.html">✿</a></div>
     <div class="flower2"><a href="https://rosadevera.github.io/frommetoyou/">❀</a></div>
-    <div class="flower3"><a>❁</a></div>
+    <div class="flower3"><a href="https://rosadevera.github.io/npc-bgm/"">❁</a></div>
 
     <section class="container">
         <h3>Project 1: Stories as Networks</h3>
         <h3>Project 2: Elastic Collection</h3>
-        <h3>Project 3: TBD</h3>
+        <h3>Project 3: Clock</h3>
     </section>
 
     <script>
