--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <section class="container">
         <h3>Project 1: Stories as Networks</h3>
         <h3>Project 2: Elastic Collection</h3>
-        <h3>Project 3: Time</h3>
+        <h3>Project 3: Experimental Clock</h3>
     </section>
 
     <script>
